// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Log should render alert in case of error in query 1`] = `
<strong
  className="typography__AlertText-sc-1yq3b4j-4 bGBNus"
>
  Tapahtui odottamaton virhe, emmekä juuri nyt pysty näyttämään tietoja.
</strong>
`;

exports[`Log should render with empty log 1`] = `
<div>
  <div
    className="Log__NotificationText-sc-1asjtoe-0 eTAfvQ"
  >
    <p>
      Tällä sivulla näytetään toimijat, jotka ovat käyttäneet opinto- ja varhaiskasvatustietojasi.
    </p>
    <p>
      Sivu on tyhjä, koska tietojasi ei ole vielä käytetty.**
    </p>
  </div>
  <div
    className="Footnote__Container-sc-x809r1-0 fPArcT"
  >
    *
    <div
      className="Footnote__TextContainer-sc-x809r1-1 dYgygp"
    >
      Koskee toistaiseksi vain opintotietoja ja varhaiskasvatuksen tietoja, ei hakemustietoja. Lisätietoa hakemusten henkilötietojen käsittelyn perusteista sekä henkilötietojen luovuttamisesta saat 
      <a
        className="typography__Link-sc-1yq3b4j-5 eygBPc"
        href="https://opintopolku.fi/konfo/fi/sivu/tietosuojaselosteet-ja-evasteet"
        target="_blank"
      >
        <test-file-stub
          className="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 cVCF"
        />
        <b
          className="typography__Bold-sc-1yq3b4j-6 haiWbX"
        >
          tietosuojaselosteesta
        </b>
      </a>
      .
    </div>
  </div>
  <div
    className="Footnote__Container-sc-x809r1-0 fPArcT"
  >
    **
    <div
      className="Footnote__TextContainer-sc-x809r1-1 dYgygp"
    >
      Tietojen käyttäjät näytetään eri tietorekistereistä seuraavasti:
      <br />
      Opintosuoritukset (KOSKI)
       - 
      14.11.2018 alkaen
      <br />
      Varhaiskasvatuksen tietovaranto (Varda)
       - 
      28.4.2023 alkaen
    </div>
  </div>
</div>
`;

exports[`Log should render with non-empty log 1`] = `
[
  <div
    className="OrganizationsHeader__Container-sc-1dz6xpo-0 eoLeSw"
  >
    <div>
      Tietojen käyttäjä
      **
    </div>
    <div
      className="OrganizationsHeader__RightContainer-sc-1dz6xpo-1 rNsSB"
    >
      Käytetty tietovaranto
    </div>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 fTQBmX"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 kLkbKr"
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 ggQkmk"
      >
        +
      </div>
      Organisaatio 1
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 jBOueG"
      >
        Opintosuoritukset (KOSKI)
      </div>
    </button>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 fTQBmX"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 kLkbKr"
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 ggQkmk"
      >
        +
      </div>
      Test 2
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 jBOueG"
      >
        Varhaiskasvatuksen tietovaranto (Varda)
      </div>
    </button>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 fPArcT"
  >
    *
    <div
      className="Footnote__TextContainer-sc-x809r1-1 dYgygp"
    >
      Koskee toistaiseksi vain opintotietoja ja varhaiskasvatuksen tietoja, ei hakemustietoja. Lisätietoa hakemusten henkilötietojen käsittelyn perusteista sekä henkilötietojen luovuttamisesta saat 
      <a
        className="typography__Link-sc-1yq3b4j-5 eygBPc"
        href="https://opintopolku.fi/konfo/fi/sivu/tietosuojaselosteet-ja-evasteet"
        target="_blank"
      >
        <test-file-stub
          className="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 cVCF"
        />
        <b
          className="typography__Bold-sc-1yq3b4j-6 haiWbX"
        >
          tietosuojaselosteesta
        </b>
      </a>
      .
    </div>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 fPArcT"
  >
    **
    <div
      className="Footnote__TextContainer-sc-x809r1-1 dYgygp"
    >
      Tietojen käyttäjät näytetään eri tietorekistereistä seuraavasti:
      <br />
      Opintosuoritukset (KOSKI)
       - 
      14.11.2018 alkaen
      <br />
      Varhaiskasvatuksen tietovaranto (Varda)
       - 
      28.4.2023 alkaen
    </div>
  </div>,
]
`;

exports[`Log should render with non-empty log and language en 1`] = `
[
  <div
    className="OrganizationsHeader__Container-sc-1dz6xpo-0 eoLeSw"
  >
    <div>
      User of data
      **
    </div>
    <div
      className="OrganizationsHeader__RightContainer-sc-1dz6xpo-1 rNsSB"
    >
      Registry that has been used
    </div>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 fTQBmX"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 kLkbKr"
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 ggQkmk"
      >
        +
      </div>
      Organization 1
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 jBOueG"
      >
        Completed studies (KOSKI)
      </div>
    </button>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 fTQBmX"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 kLkbKr"
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 ggQkmk"
      >
        +
      </div>
      Test 2
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 jBOueG"
      >
        The national data warehouse for early childhood education and care Varda
      </div>
    </button>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 fPArcT"
  >
    *
    <div
      className="Footnote__TextContainer-sc-x809r1-1 dYgygp"
    >
      This applies for the time being only to early childhood education and study-related information. Please check the 
      <a
        className="typography__Link-sc-1yq3b4j-5 eygBPc"
        href="https://opintopolku.fi/konfo/fi/sivu/tietosuojaselosteet-ja-evasteet"
        target="_blank"
      >
        <test-file-stub
          className="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 cVCF"
        />
        <b
          className="typography__Bold-sc-1yq3b4j-6 haiWbX"
        >
          register description
        </b>
      </a>
       if you want to know how the information you have given in joint/separate applications is used.
    </div>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 fPArcT"
  >
    **
    <div
      className="Footnote__TextContainer-sc-x809r1-1 dYgygp"
    >
      Showing organisations that have used your data per data registry:
      <br />
      Completed studies (KOSKI)
       - 
      starting from 14.11.2018
      <br />
      The national data warehouse for early childhood education and care Varda
       - 
      starting from 28.4.2023
    </div>
  </div>,
]
`;

exports[`Log should render with non-empty log and language sv 1`] = `
[
  <div
    className="OrganizationsHeader__Container-sc-1dz6xpo-0 eoLeSw"
  >
    <div>
      Uppgiftsanvändare
      **
    </div>
    <div
      className="OrganizationsHeader__RightContainer-sc-1dz6xpo-1 rNsSB"
    >
      Använt informationsresurs
    </div>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 fTQBmX"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 kLkbKr"
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 ggQkmk"
      >
        +
      </div>
      Organisation 1
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 jBOueG"
      >
        Studieprestationer (KOSKI)
      </div>
    </button>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 fTQBmX"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 kLkbKr"
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 ggQkmk"
      >
        +
      </div>
      Test 2
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 jBOueG"
      >
        Informationsresursen inom småbarnspedagogik (Varda)
      </div>
    </button>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 fPArcT"
  >
    *
    <div
      className="Footnote__TextContainer-sc-x809r1-1 dYgygp"
    >
      Gäller tills vidare endast studieuppgifter och uppgifter om småbarnspedagogik, dvs. inte uppgifter som ingår i ansökningar. I 
      <a
        className="typography__Link-sc-1yq3b4j-5 eygBPc"
        href="https://opintopolku.fi/konfo/sv/sivu/dataskyddsbeskrivningar-och-webbkakor"
        target="_blank"
      >
        <test-file-stub
          className="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 cVCF"
        />
        <b
          className="typography__Bold-sc-1yq3b4j-6 haiWbX"
        >
          dataskyddsbeskrivningen
        </b>
      </a>
       får du information om grunderna för användning av personuppgifter i ansökningarna och hur de kan överlåtas.
    </div>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 fPArcT"
  >
    **
    <div
      className="Footnote__TextContainer-sc-x809r1-1 dYgygp"
    >
      Här visas de aktörer som använt dina uppgifter enligt informationsresurs:
      <br />
      Studieprestationer (KOSKI)
       - 
      fr.o.m. 14.11.2018
      <br />
      Informationsresursen inom småbarnspedagogik (Varda)
       - 
      fr.o.m. 28.4.2023
    </div>
  </div>,
]
`;

exports[`Log should render with non-empty log and organization with no English name 1`] = `
[
  <div
    className="OrganizationsHeader__Container-sc-1dz6xpo-0 eoLeSw"
  >
    <div>
      User of data
      **
    </div>
    <div
      className="OrganizationsHeader__RightContainer-sc-1dz6xpo-1 rNsSB"
    >
      Registry that has been used
    </div>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 fTQBmX"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 kLkbKr"
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 ggQkmk"
      >
        +
      </div>
      Organisaatio 1
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 jBOueG"
      >
        Completed studies (KOSKI)
      </div>
    </button>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 fPArcT"
  >
    *
    <div
      className="Footnote__TextContainer-sc-x809r1-1 dYgygp"
    >
      This applies for the time being only to early childhood education and study-related information. Please check the 
      <a
        className="typography__Link-sc-1yq3b4j-5 eygBPc"
        href="https://opintopolku.fi/konfo/fi/sivu/tietosuojaselosteet-ja-evasteet"
        target="_blank"
      >
        <test-file-stub
          className="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 cVCF"
        />
        <b
          className="typography__Bold-sc-1yq3b4j-6 haiWbX"
        >
          register description
        </b>
      </a>
       if you want to know how the information you have given in joint/separate applications is used.
    </div>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 fPArcT"
  >
    **
    <div
      className="Footnote__TextContainer-sc-x809r1-1 dYgygp"
    >
      Showing organisations that have used your data per data registry:
      <br />
      Completed studies (KOSKI)
       - 
      starting from 14.11.2018
      <br />
      The national data warehouse for early childhood education and care Varda
       - 
      starting from 28.4.2023
    </div>
  </div>,
]
`;
